[package]
name = "zorca"
version = "0.1.0"
description = "Cocaine orchestrator (aka Orca) monitoring service"
authors = ["Alex Karev <karev.alexandre@gmail.com>"]

[dependencies]
cocaine = {
    git="https://github.com/3Hren/cocaine-framework-rust",
    branch="master"
}
tokio-core = "0.1"
futures = "0.1.14"
hyper = "0.11.2"
serde = "1.0"
serde_derive = "1.0"
clap = "~2.26.2"
